2006-06-22  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/c.m4 (_AC_PROG_CC_C89): Check for C89 incompatibility
	when using default mode of IBM C 6 for AIX.  Problem and two-line
	fix reported by Larry Jones.

2006-06-22  Alexandre Julliard <julliard@winehq.org>

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE): Avoid warning
	about literal '${datarootdir}' if a definition is found in the
	output file.

2006-06-20  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Use "M4" rather than "m4" when appropriate.
	Problem reported by Eric Blake.
	* doc/autoconf.texi: Likewise.
	Use @acronym around BSD, GCC, and GNU when appropriate.
	(Why GNU M4): Renamed from "Why GNU m4".
	(Redefined M4 Macros): Mention that Posix
	m4wrap takes only 1 argument, but GNU M4 1.4.x takes more.
	(Buffer Overruns): Mention size_t and ptrdiff_t as alternatives
	to int.

2006-06-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* bin/autom4te.in (handle_output): Do not forbid the empty
	pattern.
	* tests/tools.at (autoconf: the empty token): New test.

2006-06-20  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_init): Merge the two m4_wrap
	calls, so that we do not care whether they are LIFO or FIFO;
	in the m4_wrap, do not check which diversion is the topmost
	one, just check that the stack is balanced at the end.
	* lib/m4sugar/m4sh.m4 (AS_INIT): We are going to change the
	base diversion forever--pop the previous diversion before
	opening the new one; consequently, remove the m4_wrap call.
	* lib/autotest/general.m4 (AT_INIT): Likewise.
	* tests/m4sugar.at: Do not use
	m4_wrap([m4_diversion_pop([..])]), for educational purposes.

2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Document that m4wrap/m4_wrap might not be LIFO.
	* doc/autoconf.texi (Redefined M4 Macros): Likewise.
	Rework example of m4wrap token-pasting trouble so that it doesn't
	care whether it's LIFO or FIFO.
	Fix some "contrary to"s that are awkward in English.
