@@ -1,3 +1,14 @@
+2006-06-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE): Expand tests for
+	datarootdir-related errors only if AC_DATAROOTDIR_CHECKED is
+	not defined.
+	* doc/autoconf.texi (Changed Directory Variables): New node,
+	to document the whole `datarootdir' business a bit better.
+	* NEWS: Update.
+	* tests/torture.at (datarootdir workaround): Extend test.
+	Prompted by report by Alexandre Julliard.
+
 2006-06-22  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lib/autoconf/c.m4 (_AC_PROG_CC_C89): Check for C89 incompatibility
